bruinbase/output
g++ -ggdb -o bruinbase main.cc SqlParser.tab.c lex.sql.c SqlEngine.cc BTreeIndex.cc BTreeNode.cc RecordFile.cc PageFile.cc 
BTreeIndex.cc: In member function ‘RC BTreeIndex::open(const string&, char)’:
BTreeIndex.cc:38:41: error: ‘memcpy’ was not declared in this scope
  memcpy(&rootPid, buffer, sizeof(PageId));
                                         ^
BTreeIndex.cc: In member function ‘RC BTreeIndex::close()’:
BTreeIndex.cc:50:41: error: ‘memcpy’ was not declared in this scope
  memcpy(buffer, &rootPid, sizeof(PageId));
                                         ^
BTreeNode.cc: In member function ‘int BTNonLeafNode::getKeyCount()’:
BTreeNode.cc:268:111: error: ‘count’ was not declared in this scope
  for(int i = 0; i < (PageFile::PAGE_SIZE - sizeof(PageId)); i += NONLEAF_PAIR_SIZE, buf += NONLEAF_PAIR_SIZE, count++) {
                                                                                                               ^
BTreeNode.cc:276:9: error: ‘count’ was not declared in this scope
  return count;
         ^
BTreeNode.cc: In member function ‘RC BTNonLeafNode::insertAndSplit(int, PageId, BTNonLeafNode&, int&)’:
BTreeNode.cc:351:67: error: invalid conversion from ‘int’ to ‘void*’ [-fpermissive]
  memcpy(midKey, buffer+FIRST_HALF_INDEX+sizeof(PageId),sizeof(int));
                                                                   ^
In file included from /usr/include/c++/4.8/cstring:42:0,
                 from BTreeNode.cc:4:
/usr/include/string.h:46:14: error:   initializing argument 1 of ‘void* memcpy(void*, const void*, size_t)’ [-fpermissive]
 extern void *memcpy (void *__restrict __dest, const void *__restrict __src,
              ^
make: *** [bruinbase] Error 1
